--- a/src/index.css
+++ b/src/index.css
@@ -226,3 +226,41 @@ body {
   width:400px;
   color: #020b19;
 }
+
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* Ensure it's above other content */
+}
+
+.loading-container {
+  display: flex;
+  align-items: center;
+}
+
+.loading-bar {
+  width: 8px;
+  height: 40px;
+  background-color: #000; /* Adjust color as needed */
+  margin: 0 2px;
+  animation: loadingAnimation 0.7s infinite ease-in-out;
+}
+
+@keyframes loadingAnimation {
+  0% {
+    height: 20px;
+  }
+  50% {
+    height: 40px;
+  }
+  100% {
+    height: 20px;
+  }
+}
