--- a/src/index.css
+++ b/src/index.css
@@ -46,17 +46,18 @@ body {
   cursor: pointer;
   background-color: #fff;
   transition: background-color 0.3s;
-
-  &:hover {
-    background-color: #f0f0f0;
-    color: #9f1239;
-  }
-
-  &:disabled {
-    cursor: not-allowed;
-    opacity: 0.6;
-  }
 }
+
+.pagination-btn:hover {
+  background-color: #f0f0f0;
+  color: #9f1239;
+}
+
+.pagination-btn:disabled {
+  cursor: not-allowed;
+  opacity: 0.6;
+}
+
 
 .active {
   background-color: #9f1239;
